[tool.poetry]
name = "pytool"
version = "5.0.1"
description = "Pytool is a collection of utilities and language enhancements for Python"
authors = ["Jacob Alheid <shakefu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
simplejson = "^3.19.2"
six = "^1.16.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
mock = "^5.1.0"
bson = "^0.5.10"
configargparse = "^1.7"
coverage = "^6.5.0"
coveralls = "^3.3.1"
pre-commit = "^3.6.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
