[project]
name = "pytool"
version = "6.0.3"
description = "Pytool is a collection of utilities and language enhancements for Python"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Jacob Alheid", email = "shakefu@gmail.com"},
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "simplejson >=3.19.2, <4.0.0",
]

[dependency-groups]
dev = [
    "bson >=0.5.10, <1.0.0",
    "configargparse >=1.7, <2.0",
    "coverage >=6.5.0, <7.0.0",
    "coveralls >=3.3.1, <4.0.0",
    "mock >=5.1.0, <6.0.0",
    "pre-commit >=4.2.0, <5.0.0",
    "pytest >=8.4.0, <9.0.0",
    "pytest-cov >=4.1.0, <5.0.0",
    "pytest-mock >=3.14.0, <4.0.0",
    "python-dateutil >=2.9.0.post0, <3.0.0",
]
docs = [
    "sphinx >=7.2.6, <8.0.0",
    "sphinx-rtd-theme>=2.0.0,<3.0.0",
    "sphinx-autodoc-typehints >=1.25.2, <2.0.0",
]

# This is required so setuptools doesn't see "script" as a package
[tool.setuptools]
packages = ["pytool"]
